# quadruped_8DOF

install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/cinematic_control/lib/cinematic_control/: velocity_hip1_cmd  velocity_hip2_cmd  velocity_hip3_cmd  velocity_hip4_cmd
install/cinematic_control/share/cinematic_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dual_arm_panda_moveit_config/share/dual_arm_panda_moveit_config/: package.sh
install/kortex_api/share/kortex_api/: local_setup.sh  package.sh
install/kortex_bringup/share/kortex_bringup/: package.sh
install/kortex_description/share/kortex_description/: package.sh
install/kortex_driver/share/kortex_driver/: package.sh
install/quadruped_model/lib/quadruped_model/: continuous_lifter  move_hip  move_leg  move_robot  (+1 more)
log/: latest_build
scripts/CONTROL_DE_VELOCIDAD/: CONTROL_DE_VELOCIDAD.ino
scripts/CONTROL_POR_VOLTAJE/: CONTROL_POR_VOLTAJE.ino
scripts/CONTROL_POSICION/: CONTROL_POSICION.ino
scripts/CONTROL_TORQUE/: CONTROL_TORQUE.ino
scripts/ControlSystem_cod/: ControlSystem_cod.ino
scripts/ESTIMAR_PAR_POLOS/: ESTIMAR_PAR_POLOS.ino
scripts/MOVER_MUSLO_AMORTIGUADO/: MOVER_MUSLO_AMORTIGUADO.ino
scripts/MOVER_PIERNA_AMORTIGUADA/: MOVER_PIERNA_AMORTIGUADA.ino
scripts/PRUEBA_DEL_DRIVER_MUSLO/: PRUEBA_DEL_DRIVER_MUSLO.ino
scripts/PRUEBA_DEL_DRIVER_PIERNA/: PRUEBA_DEL_DRIVER_PIERNA.ino
scripts/PRUEBA_ENCODER_MUSLO/: PRUEBA_ENCODER_MUSLO.ino
scripts/PRUEBA_ENCODER_PIERNA/: PRUEBA_ENCODER_PIERNA.ino
scripts/Prueba_encoder_sinlibreria/: Prueba_encoder_sinlibreria.ino
scripts/TRAYECTORIA_CAMINATA/: TRAYECTORIA_CAMINATA.ino
src/cinematic_control/: package.xml  setup.cfg  setup.py
src/cinematic_control/cinematic_control/: velocity_hip2_cmd.py  velocity_hip4_cmd.py
src/cinematic_control/scripts/: quadruped_func.py  quadruped_math.py
src/install/: local_setup.sh  setup.bash  setup.sh
src/log/: latest_build
src/quadruped_model/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/quadruped_model/config/: controllers.yaml
src/quadruped_model/launch/: display.launch.py  gazebo.launch.py  lift_robot_launch.py  rviz.launch.py
src/quadruped_model/meshes/: base_link.STL  foot_BL_link.STL  foot_FL_link.STL
src/quadruped_model/quadruped_model/: continuous_lifter.py  vrep_communication.py
src/quadruped_model/urdf/: quadruped_SimpleModel.urdf
src/quadruped_model_msg/: CMakeLists.txt  package.xml
src/quadruped_model_msg/install/: local_setup.sh  setup.sh
src/quadruped_model_msg/install/quadruped_model_msg/share/quadruped_model_msg/: local_setup.sh  package.dsv  package.ps1  package.sh
src/quadruped_model_msg/log/: latest_build
src/quadruped_vrep/: CMakeLists.txt  setup.py
src/quadruped_vrep/launch/: vrep_launch.py
src/quadruped_vrep/src/: vrep_communication.cpp
(+53 files in other folders)
