<?xml version="1.0"?>
<package format="3">
  <name>quadruped_model_msg</name>
  <version>1.0.0</version>
  <description>
    The test messgaes package.
  </description>
  <maintainer email="jdender@espol.edu.ec">Espol</maintainer>
  <license>TODO</license>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_type>ament_cmake</build_type>
  </export>
</package>
